install/k8s/add-ons/kube-ops-view/kube-ops-view-redis-service.yaml
kind: Service
apiVersion: v1
metadata:
  labels:
    application: kube-ops-view-redis
  name:  kube-ops-view-redis
spec:
  selector:
      application: kube-ops-view
  type:   ClusterIP
  ports:
  - name:  redis
    port:  6379
    targetPort:  6379
