install/k8s/add-ons/kube-ops-view/kube-ops-view-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    application: kube-ops-view
  name: kube-ops-view
spec:
  selector:
    application: kube-ops-view
  type: LoadBalancer
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
