install/k8s/add-ons/kube-ops-view/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: kubeviewops-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$0
spec:
  tls:
  - hosts:
    - myingress.northeurope.cloudapp.azure.com
    secretName: tls-secret
  rules:
  - http:
      paths:
      - path: /
        #pathType: Prefix
        backend:
          serviceName: kube-ops-view
          servicePort: 80
